# adopt

./: AUTHORS  Makefile.am  Makefile.in  README  README.txt  autogen.sh  clear.sh  configure  configure.ac
adopt/: adopt.cpp  adopt.hpp  ipopt.opt  optcontrol.cpp  optcontrol.hpp
adopt/solvers/: IpoptSolver.cpp  IpoptSolver.hpp
models/: AUV.cpp  AUV.hpp  Diabetes.cpp  Diabetes.hpp  simple_car.cpp  simple_car.hpp  solve.cpp  toyproblem.cpp  toyproblem.hpp
